<resources>
    <string name="app_name">Ride Share</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="login">Login</string>
    <string name="singUp">Sing Up</string>
    <string name="newToRideShare">New to Ride Share? Sing Up Here</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="home">Home</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="my_rides">My Rides</string>
    <string name="personal_details">Personal Details</string>
    <string name="log_out">Log Out</string>
    <string name="search_ride">Search Ride</string>
    <string name="rank_ride">Rank Ride</string>
    <string name="open_drawer">Drawer Opened</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="request">Request</string>
    <string name="ride">Ride</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="from_time">From Time</string>
    <string name="until_time">Until Time</string>
    <string name="date">Date</string>
    <string name="bag_small_none">None/Small Bag</string>
    <string name="bag_big">Big Bag</string>
    <string name="smoker">Smoker</string>
    <string name="not_smoker">Not Smoker</string>
    <string name="dont_care">Don\'t Care</string>
    <string name="bag">Bag</string>
    <string name="post_request">Post Request</string>
    <string name="manual_search">Manual Search</string>
    <string name="post_ride">Post Ride</string>
    <string name="add_stop">Add Stop</string>
    <string name="price">Price</string>
    <string name="nis">NIS</string>
    <string name="passengers">Passengers</string>
    <string name="one_passenger">1 Passenger</string>
    <string name="two_passengers">2 Passengers</string>
    <string name="three_passengers">3 Passengers</string>
    <string name="four_passengers">4 Passengers</string>
    <string name="fill_stop_information">Fill Stop Information</string>
    <string name="address">Address</string>
    <string name="price_until">Price Until Destination</string>
    <string name="time_arrive">Time to Arrive from Source (in Minuets)</string>
    <string name="cancel">Cancel</string>

    <string-array name="options">
        <item>@string/home</item>
        <item>@string/trip_planner</item>
        <item>@string/my_rides</item>
        <item>@string/personal_details</item>
        <item>@string/log_out</item>
    </string-array>

    <string-array name="additional_options">
        <item>@string/search_ride</item>
        <item>@string/rank_ride</item>
    </string-array>

    <string-array name="bag_options">
        <item>@string/bag</item>
        <item>@string/bag_small_none</item>
        <item>@string/bag_big</item>
    </string-array>

    <string-array name="smoker_options">
        <item>@string/smoker</item>
        <item>@string/smoker</item>
        <item>@string/not_smoker</item>
        <item>@string/dont_care</item>
    </string-array>passengers

    <string-array name="passengers_options">
        <item>@string/passengers</item>
        <item>@string/one_passenger</item>
        <item>@string/two_passengers</item>
        <item>@string/three_passengers</item>
        <item>@string/four_passengers</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="update_request">Update Request</string>
    <string name="rideDate">Ride Date</string>
    <string name="seatsLeft">Seats Left</string>
    <string name="driver">Driver</string>
    <string name="driver_phone">Driver Phone</string>
    <string name="driverName">Driver Name</string>
    <string name="driver_rating">Driver Rating</string>
    <string name="suggestionDate">Suggestion Date</string>
    <string name="carDetails">Car Details</string>
    <string name="partOfRide">Part of Ride</string>
    <string name="joinRide">Join Ride</string>
    <string name="rideTime">Ride Time</string>
    <string name="add_to_passengers">Add to Passengers List</string>
    <string name="rem_from_passengers">Remove from Passengers List</string>
    <string name="rem_from_ride">Remove from Ride</string>
    <string name="add_to_ride">Add to Ride</string>
    <string name="passenger_rating">Passenger Rating</string>
    <string name="remove_from_ride">Remove From Ride</string>
    <string name="rank">Rank</string>
    <string name="has_big_bag">Has Big Bag</string>

</resources>
