<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"
tools:context="com.rideshare.rideshare.view.activity.SignUpActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/singUp"
        style="@style/RideShareText"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/RideShareTextError"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatingLabel="highlight"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:textColorHint="@color/text"
        app:baseColor="@color/text"
        app:primaryColor="@color/highlight"
        android:hint="@string/fullName"
        style="@style/RideShareEditText"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatingLabel="highlight"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        app:baseColor="@color/text"
        app:primaryColor="@color/highlight"
        android:hint="@string/email"
        style="@style/RideShareEditText"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatingLabel="highlight"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        app:baseColor="@color/text"
        app:primaryColor="@color/highlight"
        android:hint="@string/phone"
        style="@style/RideShareEditText"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatingLabel="highlight"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        app:baseColor="@color/text"
        app:primaryColor="@color/highlight"
        android:hint="@string/password"
        style="@style/RideShareEditText"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatingLabel="highlight"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        app:baseColor="@color/text"
        app:primaryColor="@color/highlight"
        android:hint="@string/confirmPassword"
        style="@style/RideShareEditText"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/singUp"
        style="@style/RideShareButton"/>
</LinearLayout>
</ScrollView>

